--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "nodemon": "nodemon",
     "nodemon-server": "nodemon server",
-    "nodemon-app": "nodemon app"
+    "nodemon-app": "nodemon app",
+    "nodemon-service": "nodemon service"
   },
   "author": "",
   "license": "ISC",
